@@ -43,6 +43,9 @@
   <style name="bracket-match"               foreground="#white" background="#grey" bold="true"/>
   <style name="bracket-mismatch"            foreground="#white" background="#red" bold="true"/>
 
+  <!-- Search Matching -->
+  <style name="search-match"                background="yellow"/>  
+  
   <!-- Comments -->
   <style name="def:comment"                 foreground="blue"/>
   <style name="def:shebang"                 foreground="blue" bold="true"/>
