@@ -62,6 +62,9 @@
   <style name="bracket-match"               foreground="aluminium1" background="aluminium3" bold="true"/>
   <style name="bracket-mismatch"            foreground="aluminium1" background="scarletred3" bold="true"/>
 
+  <!-- Search Matching -->
+  <style name="search-match"                background="butter1"/>  
+
   <!-- Comments -->
   <style name="def:comment"                 foreground="skyblue3"/>
   <style name="def:shebang"                 foreground="skyblue3" bold="true"/>
@@ -83,7 +86,7 @@
   <!-- Others -->
   <style name="def:preprocessor"            foreground="chocolate3"/>
   <style name="def:error"                   background="scarletred2" bold="true"/>
-  <style name="def:note"                    background="butter1" bold="true"/>
+  <style name="def:note"                    background="orange1" bold="true"/>
   <style name="def:underlined"              italic="true" underline="true"/>
 
   <!-- Language specific -->
